kustomize/overlays/pwf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fint-core-graphql
spec:
  ports:
    - port: 8080
  type: ClusterIP
